--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     text-align: center;
     font-family: Calibri, serif ;
     color: #000000;
-    background-color: #e39e4a;
+    background-color: navajowhite;
     word-wrap: break-word;
     font-size: 24px;
 }
